--- a/app/assets/stylesheets/navigation/notifications.scss
+++ b/app/assets/stylesheets/navigation/notifications.scss
@@ -36,11 +36,11 @@
     box-shadow: $flyout-shadow;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - var(--top-navigation) - 2em);
+    height: calc(100vh - var(--top-navigation-height) - 2em);
     padding: 1.5rem;
     position: absolute;
     right: 0;
-    top: calc(var(--top-navigation) - .5em);
+    top: calc(var(--top-navigation-height) - .5em);
     width: 400px;
 
     .sci--navigation--notificaitons-flyout-title {
