--- a/app/assets/stylesheets/repository/repository_toolbar.scss
+++ b/app/assets/stylesheets/repository/repository_toolbar.scss
@@ -9,12 +9,12 @@
     flex-grow: 1;
     flex-wrap: nowrap;
     height: 6em;
-    left: var(--repository-sidebar-margin);
+    left: var(--left-navigation-width);
     padding: 1em 2em 0;
     position: fixed;
     top: calc(4em + var(--navbar-height));
     transition: .4s $timing-function-sharp;
-    width: calc(100% - var(--repository-sidebar-margin));
+    width: calc(100% - var(--left-navigation-width));
     z-index: 99;
 
     .toolbar-left-block {
